fix: fix overflow and overlap

--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,11 +1,13 @@
 .kaufman {
+  position: relative;
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   max-width: 1440px;
   margin: auto;
   margin-top: 100px;
-  padding-top: 88px;
-  padding-bottom: 88px;
-  display: flex;
-  flex-direction: column;
-
-  align-items: center;
+  padding: 88px 0;
 }
