--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -7,4 +7,5 @@
     line-height: 34px;
     font-weight: 400;
     text-align: center;
+    z-index: 2;
 }
