--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -6,4 +6,5 @@
   line-height: 69px;
   font-weight: 600;
   text-align: center;
+  z-index: 2;
 }
