--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -4,6 +4,7 @@
     max-width: 1100px;
     margin: 0;
     padding: 0;
+    z-index: 2;
 
     list-style: none;
 }
